--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,10 @@ jobs:
            working_directory: ./TodoApi
            name: Publish build
            command: |
-             dotnet publish --output /tmp/artifacts
-             mkdir /tmp/artifacts
+             dotnet publish --output /publish/artifacts
+             mkdir /publish/artifact
       - store_artifacts:
-          path: /tmp/artifacts
+          path: /publish/artifacts
           destination: build
           name: DotnetBuild
 
