--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,15 @@ jobs:
            name: Run build
            command: dotnet build --configuration Release
         
+  publish:
+    docker: 
+      - image: microsoft/dotnet:latest
+    steps:
       - run:
            working_directory: ./TodoApi
            name: Publish build
            command: |
              dotnet publish --output /publish/artifacts
-             zip -9 /publish/azrtifacts.zip /publish/artifacts
       - store_artifacts:
           path: /publish/
           name: DotnetBuild
@@ -39,10 +42,14 @@ jobs:
             
 
 workflows:
+  version: 2
   # Below is the definition of your workflow.
   # Inside the workflow, you provide the jobs you want to run, e.g this workflow runs the build-and-test job above.
   # CircleCI will run this workflow on every commit.
   # For more details on extending your workflow, see the configuration docs: https://circleci.com/docs/2.0/configuration-reference/#workflows
-  sample: 
+  Dotnet: 
     jobs:
       - build
+      - publish:
+          requires:
+            - build
